--- a/index.html
+++ b/index.html
@@ -580,10 +580,10 @@
 				<div class="col-md-5">
 					<div class="contact-address">
 						<ul>
-							<li><i class="fa fa-map-marker"></i> New York, USA</li>
-							<li><i class="fa fa-phone"></i> +8748347934</li>
-							<li><i class="fa fa-envelope"></i> info@example.com</li>
-							<li><i class="fa fa-globe"></i> www.globe.com</li>
+							<li><i class="fa fa-map-marker"></i> <span>Address</span> New York, USA</li>
+							<li><i class="fa fa-phone"></i> <span>Phone</span> +8748347934</li>
+							<li><i class="fa fa-envelope"></i> <span>Email</span> info@example.com</li>
+							<li><i class="fa fa-globe"></i> <span>Website</span> www.globe.com</li>
 						</ul>
 					</div>
 				</div>
@@ -605,7 +605,7 @@
 					<a href=""><i class="fa fa-pinterest"></i></a>
 				</div>
 				<div class="col-xl-12 text-center">
-					<p class="copy">all rights reserved &copy; 2018</p>
+					<p class="copy">all rights reserved &copy; 2020</p>
 				</div>
 			</div>
 		</div>
